feat: :tada: solution lab07